--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development vite",
+    "start": "cross-env NODE_ENV=development vite",
     "build": "vite build"
   },
   "devDependencies": {
